--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "horde/horde-translation",
+    "name": "x59/horde-translation",
     "description": "Horde translation library",
     "type": "library",
     "homepage": "https://pear.horde.org",
@@ -13,17 +13,14 @@
     ],
     "version": "2.2.1",
     "time": "2016-02-02",
-    "repositories": [
-        {
-            "type": "pear",
-            "url": "https://pear.horde.org"
-        }
-    ],
+    "autoload": {
+        "classmap": "lib/"
+    },
     "require": {
         "php": ">=5.3.0,<=8.0.0alpha1"
     },
     "suggest": {
-        "pear-pear.horde.org/Horde_Test": ">=2.1.0@stable,<=3.0.0alpha1@stable",
+        "x59/horde-test": ">=2.1.0@stable,<=3.0.0alpha1@stable",
         "ext-gettext": "*"
     }
 }
