--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "version": "2.2.1",
     "time": "2016-02-02",
     "autoload": {
-        "classmap": "lib/"
+        "classmap": ["lib/"]
     },
     "require": {
         "php": ">=5.3.0,<=8.0.0alpha1"
